--- a/browser/js/common/directives/product-management/product-management.html
+++ b/browser/js/common/directives/product-management/product-management.html
@@ -119,7 +119,7 @@
             </div>
             <image-assign image="image" options="newProductOptions" product="newProduct"></image-assign>
             <div>
-              <button class="sqn-btn-danger" ng-click="removeImage($event, image.imageName)">Remove Image</button>
+              <button class="sqn-btn-danger" ng-click="removeImage($event, image.imageName)">Remove Image Asset</button>
             </div>
           </div>
         </div>
@@ -128,7 +128,7 @@
         <p ng-show="!newProduct['imageName'] && !newProduct['imageURL']">Upload then add an image to the product. This will be the default image shown in the shop. Images assigned to variants will be displayed to the user when they select a variant on the product page.</p>
         <div ng-show="newProduct['imageName'] && newProduct['imageURL']">
           <span ng-bind="newProduct.imageName"></span>
-          <button class="sqn-btn-danger" ng-click="removeProductImage($event)">Remove Image</button>
+          <button class="sqn-btn-danger" ng-click="removeProductImage($event)">Remove Product Image</button>
         </div>
       </div>
       <div class="flex-container-row">
