--- a/browser/js/shopProduct/shopProduct.html
+++ b/browser/js/shopProduct/shopProduct.html
@@ -12,6 +12,7 @@
       <img src="{{ product.imageURL }}"></img>
     </div>
     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+      <h4>What you're getting...</h4>
       <formatted-text rawtext="product.description"></formatted-text>
       <div class="product-option" ng-repeat="option in product.options">
         <h5>{{ option.name }}</h5>
