--- a/browser/js/common/directives/product-management/product-management.html
+++ b/browser/js/common/directives/product-management/product-management.html
@@ -92,24 +92,21 @@
         <div ng-show="displayUploadState" class="upload-status-output">
           <span ng-bind="displayOutput"></span>
         </div>
-        <label class="field-label" for="productImage">Image To Upload (drag and drop onto below or click browse)</label>
+        <label class="field-label" for="productImage">Image To Upload (drag and drop onto the field below or click 'Choose File'.)</label>
         <input file-upload type="file"></input>
-        <button class="sqn-btn-positive" ng-click="initiateUpload($event)">Upload</button>
+        <button class="sqn-btn-positive" ng-click="initiateUpload($event)">Upload Image File</button>
       </div>
       <!-- <div class="upload-progress-holder" ng-show="displayUploadState">
         <div class="upload-progress" width="{{uploadProgress}}%">{{uploadProgress}}%</div>
       </div> -->
       <div>
+        <h5 class="field-label">Uploaded Product and Variant Images</h5>
         <p ng-show="imageAssets.length === 0">No images for product.</p>
         <div ng-hide="imageAssets.length === 0">
           <div class="product-image-holder" ng-repeat="image in imageAssets">
             <img class="product-thumbnail" ng-src="{{ image.imageURL }}"></img>
             <div class="product-image-info table-responsive table-condensed">
               <table class="table table-hover">
-                <tr>
-                  <td>Image Link: </td>
-                  <td ng-bind="image.imageURL"></td>
-                </tr>
                 <tr>
                   <td>File name:</td>
                   <td ng-bind="image.imageName"></td>
@@ -123,14 +120,17 @@
           </div>
         </div>
       </div>
-      <div>
-        <p ng-show="!newProduct['imageName'] && !newProduct['imageURL']">Upload then add an image to the product. This will be the default image shown in the shop. Images assigned to variants will be displayed to the user when they select a variant on the product page.</p>
+      <div class="product-image-details">
+        <h5 class="field-label">Product Assigned Image</h5>
+        <p ng-show="!newProduct['imageName'] && !newProduct['imageURL']">No image is currently assigned. Upload then add an image to the product. This will be the default image shown in the shop. Any variants without an image will use this image.</p>
         <div ng-show="newProduct['imageName'] && newProduct['imageURL']">
-          <span ng-bind="newProduct.imageName"></span>
-          <button class="sqn-btn-danger" ng-click="removeProductImage($event)">Remove Product Image</button>
+          <div class="product-assigned-image">
+            <span ng-bind="newProduct.imageName"></span>
+            <button class="sqn-btn-danger" ng-click="removeProductImage($event)">Remove Product Image</button>
+          </div>
         </div>
       </div>
-      <div class="flex-container-row">
+      <div class="flex-container-row product-commit-options">
         <input type="submit" class="sqn-btn-positive" value="{{ submitLabel }}">
         <button class="sqn-btn" ng-click="resetFormAndClose($event)">Cancel</button>
       </div>
