--- a/public/js/shopProduct/shopProduct.html
+++ b/public/js/shopProduct/shopProduct.html
@@ -13,7 +13,7 @@
       </div>
       <img src="{{ product.imageURL }}"></img>
     </div>
-    <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+    <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 product-description">
       <h4>What you're getting...</h4>
       <formatted-text rawtext="product.description"></formatted-text>
       <div class="product-option" ng-repeat="option in product.options">
@@ -24,8 +24,8 @@
       <footer class="product-option">
         <form name="addProductToBuy" ng-submit="addProductToCart()">
           <label>How many would you like?</label>
-          <input type="number" ng-model="quantity" min="0" max="50" class="sqnInputNumber-wide"></input>
-          <input type="submit" class="sqn-btn-positive" value="Add To Cart" ng-disabled="notAvailable" ng-class="{'sqn-btn-disabled': notAvailable }"></input>
+          <input type="number" name="requestedQuantity" ng-model="quantity" min="0" max="{{ product.stock }}" class="sqnInputNumber-wide"></input>
+          <input type="submit" class="sqn-btn-positive" value="Add To Cart" ng-disabled="notAvailable || quantity > product.stock || addProductToBuy.requestedQuantity.$invalid" ng-class="{'sqn-btn-disabled': notAvailable }"></input>
         </form>
       </footer>
     </div>
