--- a/public/js/shopProduct/shopProduct.html
+++ b/public/js/shopProduct/shopProduct.html
@@ -28,7 +28,7 @@
         <form name="addProductToBuy" ng-submit="addProductToCart()">
           <label>How many would you like?</label>
           <input type="number" name="requestedQuantity" ng-model="quantity" min="0" max="{{ stock }}" class="sqnInputNumber-wide"></input>
-          <input type="submit" class="sqn-btn-positive" value="Add To Cart" ng-disabled="notAvailable || addProductToBuy.requestedQuantity.$invalid" ng-class="{'sqn-btn-disabled': notAvailable || addProductToBuy.requestedQuantity.$invalid }"></input>
+          <input type="submit" class="sqn-btn-positive" value="Add To Cart" ng-disabled="notAvailable || addProductToBuy.requestedQuantity.$invalid || (quantity === null)" ng-class="{'sqn-btn-disabled': notAvailable || addProductToBuy.requestedQuantity.$invalid || (quantity === null) }"></input>
         </form>
       </footer>
     </div>
