--- a/browser/js/common/directives/order-management/order-management.html
+++ b/browser/js/common/directives/order-management/order-management.html
@@ -1,7 +1,7 @@
 <div ng-show="orderIsUpdating" class="order-update">
   <p>Updating...</p>
 </div>
-<section class="order-management-holder">
+<section class="order-management-holder" ng-class="{'sqn-btn-disabled': order.orderStatus === 'cancelled' }">
   <header class="flex-container-row flex-vertical-center">
     <h3 ng-bind="order.recipient"></h3>
     <h3 ng-bind="order.order_ref"></h3>
@@ -28,13 +28,15 @@
       <h4>Total Order Price: ${{ order.totalPrice }}</h4>
       <h4>Payment State</h4>
       <div class="flex-container-row">
-        <button ng-repeat="paystate in paymentState" class="sqn-btn sqn-btn-flex" ng-class="{ 'product-option-selected': order.paymentState === paystate }" ng-bind="paystate" ng-disabled="order.paymentState === paystate"></button>
+        <button ng-repeat="paystate in paymentState" class="sqn-btn sqn-btn-flex" ng-class="{ 'product-option-selected': order.paymentState === paystate }" ng-bind="paystate" ng-disabled="order.paymentState === paystate || order.orderStatus === 'cancelled'" ng-click="updateOrderPayment(paystate)"></button>
       </div>
       <h4>Order State</h4>
       <div class="flex-container-row">
-        <button class="sqn-btn sqn-btn-flex" ng-repeat="ostate in orderState" ng-class="{'product-option-selected': order.orderStatus === ostate}" ng-disabled="order.orderStatus === ostate" ng-bind="ostate" ng-click="updateOrderStatus(ostate)"></button>
+        <button class="sqn-btn sqn-btn-flex" ng-repeat="ostate in orderState" ng-class="{'product-option-selected': order.orderStatus === ostate}" ng-disabled="order.orderStatus === ostate || order.orderStatus === 'cancelled'" ng-bind="ostate" ng-click="updateOrderStatus(ostate)"></button>
       </div>
+      <h4>Cancel Order: This returns all stock and is not reversible</h4>
       <div class="flex-container-row">
+        <button class="sqn-btn-danger sqn-btn-flex" ng-click="cancelOrder()" ng-disabled="order.orderStatus === 'cancelled'">Cancel Order</button>
       </div>
     </footer>
   </div>
